--- a/AsuD_CAPTUM_v0.1.ipynb
+++ b/AsuD_CAPTUM_v0.1.ipynb
@@ -40,16 +40,16 @@
       "cell_type": "code",
       "metadata": {
         "id": "-QMYRkMslDGw",
-        "outputId": "bb4b4b41-2829-4d91-f6c9-ff9752f56d96",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bb4b4b41-2829-4d91-f6c9-ff9752f56d96"
       },
       "source": [
         "!git clone https://github.com/JulianSchmidtke/CAPTUM.git"
       ],
       "id": "-QMYRkMslDGw",
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -70,10 +70,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "21aa3cc8",
-        "outputId": "95cd2a66-553e-40d3-ddc1-2968394fae0e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "95cd2a66-553e-40d3-ddc1-2968394fae0e"
       },
       "source": [
         "%matplotlib inline\n",
@@ -95,7 +95,7 @@
         "nltk.download('stopwords')"
       ],
       "id": "21aa3cc8",
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -140,30 +140,47 @@
         "files = os.listdir()"
       ],
       "id": "18f27004",
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "07ce4d17"
+        "id": "07ce4d17",
+        "outputId": "4878178a-5ec8-44ef-a255-574247a00109",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 180
+        }
       },
       "source": [
         "#Zu Testzwecken werden lediglich die letzten 5 Dateien verwendet\n",
-        "files = files[100:201]"
+        "files = files[-5]"
       ],
       "id": "07ce4d17",
-      "execution_count": 71,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-26bfd5a128dc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m#Zu Testzwecken werden lediglich die letzten 5 Dateien verwendet\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mfiles\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mfiles\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'files' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "62410ea9",
-        "outputId": "7b824d40-f42b-4f9f-da06-c49ac4559daa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "7b824d40-f42b-4f9f-da06-c49ac4559daa"
       },
       "source": [
         "fileNameTags = list(map(lambda fn: fn.split('_')[0:-2],files))\n",
@@ -178,7 +195,7 @@
         "print(fileYear)"
       ],
       "id": "62410ea9",
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,10 +213,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "8029c690",
-        "outputId": "905a4fc2-e800-4d6f-b8c3-7b18a814e522",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "905a4fc2-e800-4d6f-b8c3-7b18a814e522"
       },
       "source": [
         "#Einen leeren Pandas-Dataframe erstellen\n",
@@ -208,7 +225,7 @@
         "print(df)"
       ],
       "id": "8029c690",
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -236,18 +253,18 @@
         "    f.close"
       ],
       "id": "0e6af0f4",
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "cda7168c",
-        "outputId": "77832649-906b-4336-eb53-b427c3325c72",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        }
+        },
+        "outputId": "77832649-906b-4336-eb53-b427c3325c72"
       },
       "source": [
         "df['Name'] = fileName\n",
@@ -257,7 +274,7 @@
         "df"
       ],
       "id": "cda7168c",
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -395,6 +412,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "-nRxEmyLRhDU"
+      },
+      "source": [
+        "Es werden Füllwörter entfernt."
+      ],
+      "id": "-nRxEmyLRhDU"
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "983b795c"
@@ -414,8 +441,18 @@
         "    return filtered_text"
       ],
       "id": "983b795c",
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "1Wu3O5CFRfVx"
+      },
+      "source": [
+        "Wörter auf ihren Wortstamm reduzieren (cats -> cat, transportation -> transport)"
+      ],
+      "id": "1Wu3O5CFRfVx"
     },
     {
       "cell_type": "code",
@@ -428,8 +465,18 @@
         "    return [stemmer.stem(word) for word in text]"
       ],
       "id": "fa7a4b64",
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LDr_g2xlRdGG"
+      },
+      "source": [
+        "Komplexere Version des Stemming. Wörter werden im Zusammenhang gesehen und reduziert. Verben werden auf den Infiitiv gesetzt usw."
+      ],
+      "id": "LDr_g2xlRdGG"
     },
     {
       "cell_type": "code",
@@ -442,8 +489,20 @@
         "    return [lemmatizer.lemmatize(word) for word in text]"
       ],
       "id": "efd6f40d",
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yjs1JRBiRY-I"
+      },
+      "source": [
+        "Ich glaube es sollte entweder eine Stemming oder eine Lemmatizing Funktion angewendet werden.\n",
+        "\n",
+        "Ich glaube wir sollten erst Lemmatizen und dann Stopwords entfernen."
+      ],
+      "id": "yjs1JRBiRY-I"
     },
     {
       "cell_type": "code",
@@ -455,27 +514,28 @@
         "df['Content'] = df['Content'].apply(stoppingFunc)\n",
         "df['Content'] = df['Content'].apply(stemmingFunc)\n",
         "df['Content'] = df['Content'].apply(lemmatizingFunc)\n",
+        "\n",
         "df['Corpus'] = [' '.join(x) for x in df['Content']]"
       ],
       "id": "905d8df9",
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "7220ee4a",
-        "outputId": "acd06d0d-e8fe-4650-fded-9b02ceea02f0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 453
-        }
+        },
+        "outputId": "acd06d0d-e8fe-4650-fded-9b02ceea02f0"
       },
       "source": [
         "df"
       ],
       "id": "7220ee4a",
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -628,10 +688,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "d0b07fa0",
-        "outputId": "c1c496b9-6c7d-4cb7-d0c2-6167497c1f4d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "c1c496b9-6c7d-4cb7-d0c2-6167497c1f4d"
       },
       "source": [
         "print('Tags:')\n",
@@ -639,7 +699,7 @@
         "print(*tags, sep=\"\\n\")"
       ],
       "id": "d0b07fa0",
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -684,7 +744,7 @@
         ""
       ],
       "id": "EIJVF5X8j-A3",
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -716,23 +776,23 @@
         "tfidfconvert = TfidfVectorizer(ngram_range=(1,3)).fit(df.Corpus.values)"
       ],
       "id": "2453744a",
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "362e41ab",
-        "outputId": "06bc7eeb-4c4c-4551-d173-6f67000829c5",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "06bc7eeb-4c4c-4551-d173-6f67000829c5"
       },
       "source": [
         "len(tfidfconvert.vocabulary_)"
       ],
       "id": "362e41ab",
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -757,7 +817,7 @@
         "words_transformed = tfidfconvert.transform(df.Corpus.values)"
       ],
       "id": "95f044e2",
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -779,7 +839,7 @@
         "from sklearn.cluster import KMeans"
       ],
       "id": "67d59ddc",
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -796,10 +856,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "3a8567ca",
-        "outputId": "d884a44b-0358-4068-bbcc-c19d2a1a67fc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "d884a44b-0358-4068-bbcc-c19d2a1a67fc"
       },
       "source": [
         "Sum_of_squared_distances = []\n",
@@ -813,7 +873,7 @@
         "    "
       ],
       "id": "3a8567ca",
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -836,11 +896,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "49a1714b",
-        "outputId": "fee24f72-09ba-46a1-d804-a51bedf245c3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 295
-        }
+        },
+        "outputId": "fee24f72-09ba-46a1-d804-a51bedf245c3"
       },
       "source": [
         "plt.plot(K,Sum_of_squared_distances, 'bx-')\n",
@@ -850,7 +910,7 @@
         "plt.show()"
       ],
       "id": "49a1714b",
-      "execution_count": 92,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
