--- a/AsuD_CAPTUM_v0.1.ipynb
+++ b/AsuD_CAPTUM_v0.1.ipynb
@@ -127,11 +127,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "18f27004",
-        "outputId": "017f6a51-6212-491c-8d6b-8e34923a6280",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        }
+        },
+        "outputId": "017f6a51-6212-491c-8d6b-8e34923a6280"
       },
       "source": [
         "#Arbeitsverzeichnis auf das Ordnerverzeichnis ändern, in welchem die Daten liegen (txt-Format)\n",
@@ -251,12 +251,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5ugMSyU0f_4n",
-        "outputId": "1bc2afd4-786c-4404-c880-0c2a42c7e54c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 589
-        }
+          "height": 419
+        },
+        "id": "5ugMSyU0f_4n",
+        "outputId": "1bc2afd4-786c-4404-c880-0c2a42c7e54c"
       },
       "source": [
         "# create checksum for each file to identify duplicates\n",
@@ -270,6 +270,7 @@
         "        # pipe contents of the file through\n",
         "        return hashlib.md5(data).hexdigest()\n",
         "df_files['Checksum'] = df_files['Filepath'].apply(get_checksum)\n",
+        "\n",
         "df_files"
       ],
       "id": "5ugMSyU0f_4n",
@@ -389,12 +390,31 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "-6NJ23USltk9"
+      },
+      "source": [
+        "def get_content(filepath: str) -> str:\n",
+        "    with open(filepath, 'rb') as file_with_content:\n",
+        "      content = file_with_content.read()\n",
+        "    c.append(f.read())\n",
+        "    f.close\n",
+        "    return Nothing\n",
+        "\n",
+        "df_files['Content'] = df_files['Filepath'].apply(lambda f: open(f, 'r', encoding = \"ISO-8859-1\").read())"
+      ],
+      "id": "-6NJ23USltk9",
+      "execution_count": 60,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "62410ea9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 643
+          "height": 606
         },
-        "outputId": "fef6d215-95c1-4719-e6e1-6113c7eaf6ae"
+        "outputId": "03432e10-e768-46d5-a6be-e770767f3630"
       },
       "source": [
         "fileNameTags = list(map(lambda fn: fn.split('_')[0:-2],df_files['Filepath']))\n",
@@ -408,7 +428,7 @@
         "df_files"
       ],
       "id": "62410ea9",
-      "execution_count": 43,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -438,6 +458,7 @@
               "      <th>Tags</th>\n",
               "      <th>Year</th>\n",
               "      <th>Authors</th>\n",
+              "      <th>Content</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -449,6 +470,7 @@
               "      <td>[Allergic Diseases, Omalizumab]</td>\n",
               "      <td>2016</td>\n",
               "      <td>Kasperska-Zajac</td>\n",
+              "      <td>[International Journal of\\n| Immunopathology |...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -458,6 +480,7 @@
               "      <td>[ASST, serverity]</td>\n",
               "      <td>2017</td>\n",
               "      <td>Chen</td>\n",
+              "      <td>Article type : Original Article\\n\\nDifferent E...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -467,6 +490,7 @@
               "      <td>[Anti-IgE, TPO]</td>\n",
               "      <td>2016</td>\n",
               "      <td>Turk</td>\n",
+              "      <td>Allergology International xxx (2017) 1-5\\n\\n \\...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -476,6 +500,7 @@
               "      <td>[Severity, Duration]</td>\n",
               "      <td>2018</td>\n",
               "      <td>Amin</td>\n",
+              "      <td>ORIGINAL ARTICLE\\n\\nEur ANN ALLERGY CLIN IMMUN...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -485,9 +510,11 @@
               "      <td>[Total IgE, Duration]</td>\n",
               "      <td>2018</td>\n",
               "      <td>Choi</td>\n",
+              "      <td>ORIGINAL ARTICLE\\n\\n    \\n\\nKorean J Intern Me...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>...</th>\n",
+              "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
               "      <td>...</td>\n",
@@ -503,6 +530,7 @@
               "      <td>[Anti-IgE, Thyroglobulin]</td>\n",
               "      <td>2014</td>\n",
               "      <td>Sun</td>\n",
+              "      <td>Ann Dermatol Vol. 26, No. 2, 2014\\n\\nhttp://dx...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1042</th>\n",
@@ -512,6 +540,7 @@
               "      <td>[D-Dimer, Antihistamine]</td>\n",
               "      <td>2020</td>\n",
               "      <td>Montjoye</td>\n",
+              "      <td>Correlations between disease activity, autoimm...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1043</th>\n",
@@ -521,6 +550,7 @@
               "      <td>[Basophil, Antihistamine]</td>\n",
               "      <td>2016</td>\n",
               "      <td>Uysal</td>\n",
+              "      <td>198\\n\\nOriginal Articl¢\\n\\n \\n\\nTURK A\\nPEDIAT...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1044</th>\n",
@@ -530,6 +560,7 @@
               "      <td>[D-Dimer, Omalizumab]</td>\n",
               "      <td>17</td>\n",
               "      <td>Asero</td>\n",
+              "      <td>\\n\\n \\n\\n \\n\\nConcise report\\n\\n \\n\\nCED\\n\\nC...</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1045</th>\n",
@@ -539,45 +570,46 @@
               "      <td>[BHRA, Basophil]</td>\n",
               "      <td>2006</td>\n",
               "      <td>Yasnowsky</td>\n",
+              "      <td>a;\\nw\\n9\\nQ\\nw\\n®\\nQ\\na\\na\\na\\na\\n=\\na\\nzu\\nCy...</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
-              "<p>1046 rows × 6 columns</p>\n",
+              "<p>1046 rows × 7 columns</p>\n",
               "</div>"
             ],
             "text/plain": [
-              "                                               Filepath  ...          Authors\n",
-              "0     CAPTUM_Allergic Diseases_Omalizumab_Kasperska-...  ...  Kasperska-Zajac\n",
-              "1     CAPTUM_ASST_serverity_Chen 2017.pdf_out_text...  ...             Chen\n",
-              "2        CAPTUM_Anti-IgE_TPO_Turk 2016.pdf_out_text.txt  ...             Turk\n",
-              "3     CAPTUM_Severity_Duration_Amin 2018.pdf_out_tex...  ...             Amin\n",
-              "4     CAPTUM_Total IgE_Duration_Choi 2018.pdf_out_te...  ...             Choi\n",
-              "...                                                 ...  ...              ...\n",
-              "1041  CAPTUM_Anti-IgE_Thyroglobulin_Sun 2014.pdf_out...  ...              Sun\n",
-              "1042  CAPTUM_D-Dimer_Antihistamine_Montjoye 2020.pdf...  ...         Montjoye\n",
-              "1043  CAPTUM_Basophil_Antihistamine_Uysal 2016.pdf_o...  ...            Uysal\n",
-              "1044  CAPTUM_D-Dimer_Omalizumab_Asero 2017  .pdf_out...  ...            Asero\n",
-              "1045  CAPTUM_BHRA_Basophil_Yasnowsky 2006.pdf_out_te...  ...        Yasnowsky\n",
+              "                                               Filepath  ...                                            Content\n",
+              "0     CAPTUM_Allergic Diseases_Omalizumab_Kasperska-...  ...  [International Journal of\\n| Immunopathology |...\n",
+              "1     CAPTUM_ASST_serverity_Chen 2017.pdf_out_text...  ...  Article type : Original Article\\n\\nDifferent E...\n",
+              "2        CAPTUM_Anti-IgE_TPO_Turk 2016.pdf_out_text.txt  ...  Allergology International xxx (2017) 1-5\\n\\n \\...\n",
+              "3     CAPTUM_Severity_Duration_Amin 2018.pdf_out_tex...  ...  ORIGINAL ARTICLE\\n\\nEur ANN ALLERGY CLIN IMMUN...\n",
+              "4     CAPTUM_Total IgE_Duration_Choi 2018.pdf_out_te...  ...  ORIGINAL ARTICLE\\n\\n    \\n\\nKorean J Intern Me...\n",
+              "...                                                 ...  ...                                                ...\n",
+              "1041  CAPTUM_Anti-IgE_Thyroglobulin_Sun 2014.pdf_out...  ...  Ann Dermatol Vol. 26, No. 2, 2014\\n\\nhttp://dx...\n",
+              "1042  CAPTUM_D-Dimer_Antihistamine_Montjoye 2020.pdf...  ...  Correlations between disease activity, autoimm...\n",
+              "1043  CAPTUM_Basophil_Antihistamine_Uysal 2016.pdf_o...  ...  198\\n\\nOriginal Articl¢\\n\\n \\n\\nTURK A\\nPEDIAT...\n",
+              "1044  CAPTUM_D-Dimer_Omalizumab_Asero 2017  .pdf_out...  ...   \\n\\n \\n\\n \\n\\nConcise report\\n\\n \\n\\nCED\\n\\nC...\n",
+              "1045  CAPTUM_BHRA_Basophil_Yasnowsky 2006.pdf_out_te...  ...  a;\\nw\\n9\\nQ\\nw\\n®\\nQ\\na\\na\\na\\na\\n=\\na\\nzu\\nCy...\n",
               "\n",
-              "[1046 rows x 6 columns]"
+              "[1046 rows x 7 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 43
+          "execution_count": 61
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "riAajBNjiMCf",
-        "outputId": "6034c89b-26c7-403c-f0c0-b48f9b5c0a18",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 419
-        }
+        },
+        "id": "riAajBNjiMCf",
+        "outputId": "6034c89b-26c7-403c-f0c0-b48f9b5c0a18"
       },
       "source": [
         "# create dataframe for further analytics w/o the duplicate articles\n",
@@ -751,7 +783,7 @@
       "source": [
         "c = []\n",
         "for file in files:\n",
-        "    f = open(file, \"r\", encoding = \"ISO-8859-1\")\n",
+        "    f = open(file, \"r\", )\n",
         "    c.append(f.read())\n",
         "    f.close"
       ],
@@ -765,7 +797,7 @@
         "id": "cda7168c",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 643
+          "height": 453
         },
         "outputId": "df8bc762-f7cd-4ed0-ee56-ebce930175fc"
       },
@@ -1277,11 +1309,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "PzKymALEXl7n",
-        "outputId": "8b974ff5-dbf2-4e4f-e59b-a7aed70ee690",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PzKymALEXl7n",
+        "outputId": "8b974ff5-dbf2-4e4f-e59b-a7aed70ee690"
       },
       "source": [
         "df.Corpus"
