Doppelte Paper entfernt, Basis Data-Frame überabeitet, Tags von eindeutigen Papern zusammengeführt

--- a/AsuD_CAPTUM_v0.1.ipynb
+++ b/AsuD_CAPTUM_v0.1.ipynb
@@ -604,12 +604,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NfbR4_P9s0f_",
-        "outputId": "81ac2141-d996-43da-e799-a2629f787e51",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 949
-        }
+        },
+        "id": "NfbR4_P9s0f_",
+        "outputId": "81ac2141-d996-43da-e799-a2629f787e51"
       },
       "source": [
         "checksums = df_files['Checksum'].unique()\n",
@@ -815,17 +815,17 @@
           "height": 419
         },
         "id": "riAajBNjiMCf",
-        "outputId": "441c5999-625f-4d46-8ffe-587eded25630"
+        "outputId": "0df03276-0e02-43b7-f137-57054e48b4a2"
       },
       "source": [
         "# create dataframe for further analytics w/o the duplicate articles\n",
-        "df_analyze = df_files.drop_duplicates(subset=['Checksum'], keep='first')\n",
-        "df_analyze.reset_index(inplace=True, drop=True)\n",
-        "df_analyze = df_analyze.loc[:,['Authors','Year','Tags', 'Content']]\n",
-        "df_analyze"
+        "df = df_files.drop_duplicates(subset=['Checksum'], keep='first')\n",
+        "df.reset_index(inplace=True, drop=True)\n",
+        "df = df.loc[:,['Authors','Year','Tags', 'Content']]\n",
+        "df"
       ],
       "id": "riAajBNjiMCf",
-      "execution_count": 82,
+      "execution_count": 84,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -958,178 +958,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 82
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "0e6af0f4"
-      },
-      "source": [
-        "c = []\n",
-        "for file in files:\n",
-        "    f = open(file, \"r\", )\n",
-        "    c.append(f.read())\n",
-        "    f.close"
-      ],
-      "id": "0e6af0f4",
-      "execution_count": 9,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "cda7168c",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 453
-        },
-        "outputId": "df8bc762-f7cd-4ed0-ee56-ebce930175fc"
-      },
-      "source": [
-        "df['Name'] = fileName\n",
-        "df['Tags'] = fileTags\n",
-        "df['Year'] = fileYear\n",
-        "df['Content'] = c\n",
-        "df"
-      ],
-      "id": "cda7168c",
-      "execution_count": 10,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "<div>\n",
-              "<style scoped>\n",
-              "    .dataframe tbody tr th:only-of-type {\n",
-              "        vertical-align: middle;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe tbody tr th {\n",
-              "        vertical-align: top;\n",
-              "    }\n",
-              "\n",
-              "    .dataframe thead th {\n",
-              "        text-align: right;\n",
-              "    }\n",
-              "</style>\n",
-              "<table border=\"1\" class=\"dataframe\">\n",
-              "  <thead>\n",
-              "    <tr style=\"text-align: right;\">\n",
-              "      <th></th>\n",
-              "      <th>Name</th>\n",
-              "      <th>Tags</th>\n",
-              "      <th>Year</th>\n",
-              "      <th>Content</th>\n",
-              "    </tr>\n",
-              "  </thead>\n",
-              "  <tbody>\n",
-              "    <tr>\n",
-              "      <th>CAPTUM_Allergic Diseases_Omalizumab_Kasperska-Zajac 2016.pdf_out_text.txt</th>\n",
-              "      <td>Kasperska-Zajac 2016.pdf</td>\n",
-              "      <td>[Allergic Diseases, Omalizumab]</td>\n",
-              "      <td>2016</td>\n",
-              "      <td>[International Journal of\\n| Immunopathology |...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>CAPTUM_ASST_serverity_Chen 2017.pdf_out_text.txt</th>\n",
-              "      <td>Chen 2017.pdf</td>\n",
-              "      <td>[ASST, serverity]</td>\n",
-              "      <td>2017</td>\n",
-              "      <td>Article type : Original Article\\n\\nDifferent E...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>CAPTUM_Anti-IgE_TPO_Turk 2016.pdf_out_text.txt</th>\n",
-              "      <td>Turk 2016.pdf</td>\n",
-              "      <td>[Anti-IgE, TPO]</td>\n",
-              "      <td>2016</td>\n",
-              "      <td>Allergology International xxx (2017) 1-5\\n\\n \\...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>CAPTUM_Severity_Duration_Amin 2018.pdf_out_text.txt</th>\n",
-              "      <td>Amin 2018.pdf</td>\n",
-              "      <td>[Severity, Duration]</td>\n",
-              "      <td>2018</td>\n",
-              "      <td>ORIGINAL ARTICLE\\n\\nEur ANN ALLERGY CLIN IMMUN...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>CAPTUM_Total IgE_Duration_Choi 2018.pdf_out_text.txt</th>\n",
-              "      <td>Choi 2018.pdf</td>\n",
-              "      <td>[Total IgE, Duration]</td>\n",
-              "      <td>2018</td>\n",
-              "      <td>ORIGINAL ARTICLE\\n\\n    \\n\\nKorean J Intern Me...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>...</th>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "      <td>...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>CAPTUM_Anti-IgE_Thyroglobulin_Sun 2014.pdf_out_text.txt</th>\n",
-              "      <td>Sun 2014.pdf</td>\n",
-              "      <td>[Anti-IgE, Thyroglobulin]</td>\n",
-              "      <td>2014</td>\n",
-              "      <td>Ann Dermatol Vol. 26, No. 2, 2014\\n\\nhttp://dx...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>CAPTUM_D-Dimer_Antihistamine_Montjoye 2020.pdf_out_text.txt</th>\n",
-              "      <td>Montjoye 2020.pdf</td>\n",
-              "      <td>[D-Dimer, Antihistamine]</td>\n",
-              "      <td>2020</td>\n",
-              "      <td>Correlations between disease activity, autoimm...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>CAPTUM_Basophil_Antihistamine_Uysal 2016.pdf_out_text.txt</th>\n",
-              "      <td>Uysal 2016.pdf</td>\n",
-              "      <td>[Basophil, Antihistamine]</td>\n",
-              "      <td>2016</td>\n",
-              "      <td>198\\n\\nOriginal Articl¢\\n\\n \\n\\nTURK A\\nPEDIAT...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>CAPTUM_D-Dimer_Omalizumab_Asero 2017  .pdf_out_text.txt</th>\n",
-              "      <td>Asero 2017  .pdf</td>\n",
-              "      <td>[D-Dimer, Omalizumab]</td>\n",
-              "      <td>17</td>\n",
-              "      <td>\\n\\n \\n\\n \\n\\nConcise report\\n\\n \\n\\nCED\\n\\nC...</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>CAPTUM_BHRA_Basophil_Yasnowsky 2006.pdf_out_text.txt</th>\n",
-              "      <td>Yasnowsky 2006.pdf</td>\n",
-              "      <td>[BHRA, Basophil]</td>\n",
-              "      <td>2006</td>\n",
-              "      <td>a;\\nw\\n9\\nQ\\nw\\n®\\nQ\\na\\na\\na\\na\\n=\\na\\nzu\\nCy...</td>\n",
-              "    </tr>\n",
-              "  </tbody>\n",
-              "</table>\n",
-              "<p>1046 rows × 4 columns</p>\n",
-              "</div>"
-            ],
-            "text/plain": [
-              "                                                                        Name  ...                                            Content\n",
-              "CAPTUM_Allergic Diseases_Omalizumab_Kasperska-Z...  Kasperska-Zajac 2016.pdf  ...  [International Journal of\\n| Immunopathology |...\n",
-              "CAPTUM_ASST_serverity_Chen 2017.pdf_out_text.txt             Chen 2017.pdf  ...  Article type : Original Article\\n\\nDifferent E...\n",
-              "CAPTUM_Anti-IgE_TPO_Turk 2016.pdf_out_text.txt                 Turk 2016.pdf  ...  Allergology International xxx (2017) 1-5\\n\\n \\...\n",
-              "CAPTUM_Severity_Duration_Amin 2018.pdf_out_text...             Amin 2018.pdf  ...  ORIGINAL ARTICLE\\n\\nEur ANN ALLERGY CLIN IMMUN...\n",
-              "CAPTUM_Total IgE_Duration_Choi 2018.pdf_out_tex...             Choi 2018.pdf  ...  ORIGINAL ARTICLE\\n\\n    \\n\\nKorean J Intern Me...\n",
-              "...                                                                      ...  ...                                                ...\n",
-              "CAPTUM_Anti-IgE_Thyroglobulin_Sun 2014.pdf_out_...              Sun 2014.pdf  ...  Ann Dermatol Vol. 26, No. 2, 2014\\n\\nhttp://dx...\n",
-              "CAPTUM_D-Dimer_Antihistamine_Montjoye 2020.pdf_...         Montjoye 2020.pdf  ...  Correlations between disease activity, autoimm...\n",
-              "CAPTUM_Basophil_Antihistamine_Uysal 2016.pdf_ou...            Uysal 2016.pdf  ...  198\\n\\nOriginal Articl¢\\n\\n \\n\\nTURK A\\nPEDIAT...\n",
-              "CAPTUM_D-Dimer_Omalizumab_Asero 2017  .pdf_out_...          Asero 2017  .pdf  ...   \\n\\n \\n\\n \\n\\nConcise report\\n\\n \\n\\nCED\\n\\nC...\n",
-              "CAPTUM_BHRA_Basophil_Yasnowsky 2006.pdf_out_tex...        Yasnowsky 2006.pdf  ...  a;\\nw\\n9\\nQ\\nw\\n®\\nQ\\na\\na\\na\\na\\n=\\na\\nzu\\nCy...\n",
-              "\n",
-              "[1046 rows x 4 columns]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 10
+          "execution_count": 84
         }
       ]
     },
@@ -1249,7 +1078,7 @@
         "id": "7220ee4a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 881
+          "height": 589
         },
         "outputId": "6c8485f2-abd2-4084-fa74-147db67c712a"
       },
